--- a/stake.css
+++ b/stake.css
@@ -12,6 +12,8 @@ body {
     display: flex;
     width: 100%;
     height: 100vh;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
 }
 
@@ -57,7 +59,7 @@ i {
 }
 
 
-/*FIXED LEFT SIDE MENU*/
+/*DETAILED SIDE MENU*/
 
 .stake-side-bar {
     display: flex;
@@ -1159,7 +1161,11 @@ i {
     font-weight: 600;
 }
 
-.collapse-bl {
+.collapse-betslip {
+    position: relative;
+}
+
+.cb-image {
     height: 30px;
     width: 40px;
     font-size: 18px;
@@ -1168,8 +1174,22 @@ i {
     cursor: pointer;
 }
 
-.collapse-bl:hover {
+.cb-image:hover {
     background-color: #071824;
+}
+
+.cb-hover {
+    display: none;
+    white-space: nowrap;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 15px;
+    border-radius: 5px;
+    background-color: white;
+    color: #0E212F;
+    position: absolute;
+    right: 0;
+    top: 35px;
 }
 
 .blt-dropdown {
