--- a/stake.css
+++ b/stake.css
@@ -1161,8 +1161,14 @@ thead {
     padding: 0 15px;
 }
 
+tbody {
+    position: relative;
+    top: 10px;
+}
+
 tbody tr {
     height: 40px;
+    width: 100%;
     padding: 0 15px;
 }
 
@@ -1176,22 +1182,51 @@ table, th, td {
 }
 
 td {
+    width: 20%;
     white-space: nowrap;
     border: none;
 }
 
 .mc-event {
     text-align: left;
+    padding: 0 15px;
+}
+
+tbody .mc-event {
+    color: white;
+}
+
+.mc-event span {
+    width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.mc-user, .mc-time, .mc-odd {
+    text-align: center;
+}
+
+.mc-user span {
+    width: 100%;
+}
+
+.known-user {
     color: white;
 }
 
 .mc-bet {
     text-align: right;
+    padding-right: 15px;
 }
 
-.mc-user, .mc-time, .mc-odd {
-    flex-grow: 1;
-    text-align: center;
+.mc-bet img {
+    margin-left: 5px;
+}
+
+.mc-bet span {
+    width: 100%;
+    justify-content: end;
 }
 
 /*CASHIER (VIEW SELECTED ODDS & CHECKOUT)*/
