--- a/stake.css
+++ b/stake.css
@@ -1281,7 +1281,7 @@ tbody .mc-event, .known-user span {
     background-color: #4290E7;
     color: #071824;
     font-size: 11px;
-    font-weight: 600;
+    font-weight: 800;
 }
 
 .collapse-betslip {
@@ -1697,6 +1697,10 @@ tbody .mc-event, .known-user span {
     font-weight: 600px;
     margin-top: 10px;
     opacity: 0.5;
+}
+
+.check-out-singles button {
+    cursor: not-allowed;
 }
 
 /* Multi checkout */
