--- a/stake.css
+++ b/stake.css
@@ -559,6 +559,8 @@ i {
     margin-right: 5px;
 }
 
+/* Fixed Header */
+
 .fixed-top {
     width: 100%;
     height: 60px;
@@ -585,7 +587,6 @@ i {
 
 .ft-current-wallet {
     height: 43px;
-    width: 110px;
     padding: 10px;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
@@ -604,6 +605,12 @@ i {
 
 .ft-current-wallet i {
     transition: all 0.3s linear;
+}
+
+.ft-current-wallet .current-value {
+    max-width: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .sw-text {
@@ -1252,7 +1259,7 @@ tbody .mc-event, .known-user span {
 .footer {
     flex-direction: column;
     width: 100%;
-    height: 920px;
+    height: 1000px;
     background-color: #071C2B;
 }
 
@@ -1277,6 +1284,7 @@ tbody .mc-event, .known-user span {
 
 .fm-header {
     font-size: 15px;
+    cursor: default;
 }
 
 .fm-body {
@@ -1285,6 +1293,7 @@ tbody .mc-event, .known-user span {
 }
 
 .fmb-item {
+    cursor: default;
     transition: all 0.1s ease;
 }
 
