Open Bets Popup (Gets input once)

--- a/stake.css
+++ b/stake.css
@@ -1386,7 +1386,7 @@ tbody .mc-event, .known-user span {
     border-radius: 0 0 5px 5px;
 }
 
-.obe-mc-next {
+.obe-mc-last {
     margin-top: 5px;
     border-radius: 5px 5px 0 0;
 }
