--- a/stake.css
+++ b/stake.css
@@ -99,6 +99,7 @@ i {
     color: white;
     font-size: 13px;
     font-weight: 600;
+    z-index: 99999;
 }
 
 .stake-side-bar img {
@@ -560,7 +561,7 @@ i {
     flex-grow: 1;
     background-color: #1B2D38;
     height: 100vh;
-    min-width: calc(100% - (350px + 240px));
+    min-width: calc(100% - 590px);
     font-size: 13px;
     font-weight: 600;
 }
@@ -590,10 +591,6 @@ i {
     height: 32px;
     width: auto;
     margin: 0;
-}
-
-.stake-mini-logo {
-    display: none;
 }
 
 .center-wallets {
@@ -641,10 +638,6 @@ i {
 
 .sw-text:hover {
     background-color: #105FB5;
-}
-
-.sw-image {
-    display: none;
 }
 
 .wallet-dropdown {
@@ -1171,6 +1164,14 @@ i {
 
 /* Responsive Contents */
 
+.stake-mini-logo {
+    display: none;
+}
+
+.sw-image {
+    display: none;
+}
+
 .res-stats-extra {
     display: none;
 }
@@ -1188,6 +1189,11 @@ i {
 .res-odd-type {
     display: none;
 }
+
+.tablet-dark-bg {
+    display: none;
+}
+
 
 /* View Random Bets */
 
@@ -1306,7 +1312,7 @@ tbody .mc-event {
     display: none;
     position: absolute;
     left: 0;
-    z-index: 99999;
+    z-index: 999999;
 }
 
 .view-open-bets img {
@@ -1314,7 +1320,7 @@ tbody .mc-event {
     width: auto;
 }
 
-.popup-background {
+.view-open-bets .popup-background {
     width: 100vw;
     height: 100vh;
     background-color: #040c12;
@@ -1772,11 +1778,12 @@ tbody .mc-event {
     width: 350px;
     min-width: 350px;
     height: 100vh;
+    position: relative;
     background-color: #0E212F;
     color: white;
     font-size: 13px;
     font-weight: 600;
-    position: relative;
+    z-index: 99999;
 }
 
 .minimize-cashier {
