--- a/responsive.css
+++ b/responsive.css
@@ -7,7 +7,9 @@
 }
 
 @media screen and (max-width: 1150px) {
-    
+    .md-body .extra-odds {
+        margin-left: 1%;
+    }
 }
 
 @media only screen and (max-width: 1500px) {
