--- a/responsive.css
+++ b/responsive.css
@@ -4,13 +4,19 @@
     .md-body .extra-odds {
         margin-left: 5px;
     }
-}
 
-/* @media only screen and (max-width: 1000px) {
-    .mc-user, .mc-time, .mc-odd {
+    .sw-image {
+        display: flex;
+    }
+
+    .sw-text {
         display: none;
     }
-} */
+
+    .ft-search span {
+        display: none;
+    }
+}
 
 .stake-mini-logo img {
     height: 32px;
@@ -91,3 +97,57 @@
     left: -100%;
 }
 
+
+@media screen and (max-width: 760px) {
+    .stake-side-bar, .small-side-bar, .tablet-dark-bg {
+        display: none;
+    }
+    .ft-search, .chat-icon {
+        display: none;
+    }
+
+    .user-profile {
+        margin: 0;
+    }
+
+    .tablet-mobile-menu {
+        display: flex;
+        height: 60px;
+        width: 100vw;
+        padding: 0 2%;
+        position: absolute;
+        bottom: 0;
+        background-color: #071C2B;
+        color: white;
+    }
+
+    .tmm-item {
+        flex-grow: 1;
+        text-align: center;
+        font-size: 11px;
+        font-weight: 600;
+    }
+    
+    .tmm-item img {
+        height: 11px;
+    }
+    
+    .tmm-image {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-bottom: 5px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .bs-menu2 {
+        display: block;
+        width: fit-content;
+    }
+
+    .menu2-right {
+        margin-top: 30px;
+        margin-left: 20px;
+    }
+}
